[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools>=61.2']

[project]
name = 'numpydoc'
description = 'Sphinx extension to support docstrings in Numpy format'
readme = 'README.rst'
requires-python = '>=3.8'
dynamic = ['version']
keywords = [
    'sphinx',
    'numpy',
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Plugins',
    'License :: OSI Approved :: BSD License',
    'Topic :: Documentation',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
dependencies = [
    'sphinx>=6',
    'tabulate>=0.8.10',
    "tomli>=1.1.0;python_version<'3.11'",
]

[[project.authors]]
name = 'Pauli Virtanen and others'
email = 'pav@iki.fi'

[project.license]
file = 'LICENSE.txt'

[project.urls]
Homepage = 'https://numpydoc.readthedocs.io'
Source = 'https://github.com/numpy/numpydoc/'

[project.optional-dependencies]
developer = [
    'pre-commit>=3.3',
    "tomli; python_version < '3.11'",
]
doc = [
    'numpy>=1.22',
    'matplotlib>=3.5',
    'pydata-sphinx-theme>=0.13.3',
    'sphinx>=7',
]
test = [
    'pytest',
    'pytest-cov',
    'matplotlib',
]

[project.scripts]
validate-docstrings = 'numpydoc.hooks.validate_docstrings:main'

[tool.changelist]
title_template = "{version}"
# Profiles that are excluded from the contributor list.
ignored_user_logins = ["dependabot[bot]", "pre-commit-ci[bot]"]

[tool.setuptools]
include-package-data = false
packages = [
    'numpydoc',
    'numpydoc.hooks',
]
[tool.setuptools.dynamic.version]
attr = 'numpydoc.__version__'

[tool.setuptools.package-data]
numpydoc = [
    'tests/test_*.py',
    'tests/tinybuild/Makefile',
    'tests/tinybuild/index.rst',
    'tests/tinybuild/*.py',
    'templates/*.rst',
]

[tool.pytest.ini_options]
addopts = '''
--showlocals --doctest-modules -ra --cov-report= --cov=numpydoc
--junit-xml=junit-results.xml --ignore=doc/ --ignore=tools/'''
junit_family = 'xunit2'
