[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools>=61.2']

[project]
name = 'numpydoc'
description = 'Sphinx extension to support docstrings in Numpy format'
readme = 'README.rst'
requires-python = '>=3.9'
dynamic = ['version']
keywords = [
    'sphinx',
    'numpy',
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Plugins',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Documentation',
]
dependencies = [
    'sphinx>=6',
    'tabulate>=0.8.10',
    "tomli>=1.1.0;python_version<'3.11'",
]

[[project.authors]]
name = 'Pauli Virtanen and others'
email = 'pav@iki.fi'

[project.license]
file = 'LICENSE.txt'

[project.urls]
Homepage = 'https://numpydoc.readthedocs.io'
Source = 'https://github.com/numpy/numpydoc/'

[project.optional-dependencies]
developer = [
    'pre-commit>=3.3',
    "tomli; python_version < '3.11'",
]
doc = [
    'numpy>=1.22',
    'matplotlib>=3.5',
    'pydata-sphinx-theme>=0.13.3',
    'sphinx>=7',
    'intersphinx_registry',
]
test = [
    'pytest',
    'pytest-cov',
    'matplotlib',
]

[project.scripts]
numpydoc = 'numpydoc.cli:main'

[tool.changelist]
title_template = "{version}"
# Profiles that are excluded from the contributor list.
ignored_user_logins = ["dependabot[bot]", "pre-commit-ci[bot]", "web-flow"]

[tool.ruff.lint]
extend-select = [
  "B",        # flake8-bugbear
  "I",        # isort
  "ARG",      # flake8-unused-arguments
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "ICN",      # flake8-import-conventions
  "G",        # flake8-logging-format
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
  "EXE",      # flake8-executable
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
  "FURB",     # refurb
  "PYI",      # flake8-pyi
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "ISC001",   # Conflicts with formatter
  "ARG001",   # FIXME: consider removing this and the following rules from this list
  "ARG002",
  "B004",
  "B007",
  "B023",
  "B028",
  "B034",
  "C408",
  "E402",
  "E741",
  "EM101",
  "EM102",
  "EXE001",
  "F401",
  "F811",
  "F821",
  "F841",
  "PIE810",
  "PLW0603",
  "PLW2901",
  "PLW3301",
  "PT006",
  "PT007",
  "PT011",
  "PT012",
  "PT013",
  "PTH100",
  "PTH118",
  "PTH120",
  "PTH123",
  "PYI024",
  "RET503",
  "RET504",
  "RET505",
  "RET506",
  "RET507",
  "RET508",
  "RUF005",
  "RUF012",
  "RUF013",
  "SIM102",
  "SIM105",
  "SIM108",
  "SIM115",
  "T201",
  "UP006",
  "UP031",
  "UP035",
]

[tool.ruff.lint.per-file-ignores]
"doc/example.py" = ["ARG001", "F401", "I001"]

[tool.ruff.format]
docstring-code-format = true

[tool.setuptools]
include-package-data = false
packages = [
    'numpydoc',
    'numpydoc.hooks',
]
[tool.setuptools.dynamic.version]
attr = 'numpydoc.__version__'

[tool.setuptools.package-data]
numpydoc = [
    'tests/test_*.py',
    'tests/tinybuild/Makefile',
    'tests/tinybuild/index.rst',
    'tests/tinybuild/*.py',
    'templates/*.rst',
]

[tool.pytest.ini_options]
addopts = '''
--showlocals --doctest-modules --cov-report= --cov=numpydoc
--junit-xml=junit-results.xml --ignore=doc/ --ignore=tools/'''
junit_family = 'xunit2'
